[gd_scene load_steps=32 format=3 uid="uid://cqvnirrk2aowu"]

[ext_resource type="StyleBox" uid="uid://7uul88qs5s03" path="res://ButtonNormal.tres" id="1_cp3sm"]
[ext_resource type="Script" path="res://Task2.gd" id="1_psal2"]
[ext_resource type="Shader" path="res://Task2.gdshader" id="2_5hk43"]
[ext_resource type="StyleBox" path="res://ButtonHover.tres" id="2_tou46"]
[ext_resource type="ButtonGroup" uid="uid://l2fymalya7w0" path="res://gender_radio.tres" id="2_yg6p7"]
[ext_resource type="StyleBox" path="res://ButtonPressed.tres" id="3_jabyo"]
[ext_resource type="StyleBox" path="res://ButtonFocus.tres" id="4_81r7x"]
[ext_resource type="Animation" uid="uid://dv4y1h6vq6rcc" path="res://BtnMoveDown.tres" id="5_q4xxb"]
[ext_resource type="Animation" uid="uid://bhy8xnq4pwvwv" path="res://BtnMoveUp.tres" id="6_jdswh"]
[ext_resource type="Texture2D" uid="uid://dv2mjpfy5rlrh" path="res://assets/penguin/peng_sheet.png" id="7_ywcne"]
[ext_resource type="Texture2D" uid="uid://d0utshxkcp0t0" path="res://assets/penguin/speech.png" id="8_ugcmp"]
[ext_resource type="Animation" uid="uid://bjriuns50hqsm" path="res://StBtnMoveUp.tres" id="9_o1iq3"]
[ext_resource type="Texture2D" uid="uid://b51vg4mdsp1ux" path="res://assets/personas/barbara_sprite.png" id="10_fy2rn"]
[ext_resource type="Texture2D" uid="uid://iwlu2ilfxmx2" path="res://assets/personas/cataracts.jpg" id="12_37j8a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gdbcw"]
shader = ExtResource("2_5hk43")
shader_parameter/blur_amount = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mggvl"]
bg_color = Color(0.690196, 0.666667, 0.666667, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(928, 70)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["OPEN"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ToolsBG:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(232, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ToolsBorder:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(232, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../ScreenReader:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["SCREEN READER"]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../ScreenReader:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(184, 64)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../ScreenReader:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../SR_btn:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(954, 55)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../SR_btn:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../ScreenReader:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(776, 72)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cvxn"]
_data = {
"MoveDown": ExtResource("5_q4xxb"),
"MoveUp": ExtResource("6_jdswh"),
"RESET": SubResource("2")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kivup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1hu0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0m6qc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cpbcf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pik2j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vh1cq"]
bg_color = Color(0.521569, 0.521569, 0.521569, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vylau"]
bg_color = Color(0.823529, 0.823529, 0.823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtgad"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4fu3"]
bg_color = Color(0.521569, 0.521569, 0.521569, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5vj4k"]

[sub_resource type="Animation" id="8"]
resource_name = "MoveDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StoryBG:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(992, 488), Vector2(992, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StoryBG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 32), Vector2(16, 520)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 5), Vector2(16, 495)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["CLOSE", "OPEN"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../StoryBorder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 31), Vector2(16, 520)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../StoryBorder:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 2.08165e-12)]
}

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StoryBG:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(992, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StoryBG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 520)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["OPEN"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 495)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../StoryBorder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 520)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../StoryBorder:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 2.08165e-12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hwui"]
_data = {
"MoveDown": SubResource("8"),
"MoveUp": ExtResource("9_o1iq3"),
"RESET": SubResource("9")
}

[node name="Node2D" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_psal2")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 592.0
color = Color(0.278431, 0.156863, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TaskBG" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 760.0
offset_bottom = 480.0
metadata/_edit_use_anchors_ = true

[node name="TaskBorder" type="ReferenceRect" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 760.0
offset_bottom = 480.0
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false
metadata/_edit_use_anchors_ = true

[node name="TaskContainer" type="ReferenceRect" parent="."]
offset_left = 16.0
offset_top = 15.5
offset_right = 760.0
offset_bottom = 479.5
border_color = Color(0, 0, 0, 1)
border_width = 2.0
metadata/_edit_use_anchors_ = true

[node name="err_label" type="Label" parent="TaskContainer"]
layout_mode = 0
offset_left = 158.0
offset_top = 47.0
offset_right = 585.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="fn_label" type="Label" parent="TaskContainer"]
layout_mode = 0
offset_left = 157.0
offset_top = 89.5
offset_right = 255.0
offset_bottom = 116.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "First Name: "
metadata/_edit_use_anchors_ = true

[node name="fn_box" type="TextEdit" parent="TaskContainer"]
layout_mode = 0
offset_left = 257.0
offset_top = 86.5
offset_right = 577.0
offset_bottom = 121.5
scroll_fit_content_height = true
metadata/_edit_use_anchors_ = true

[node name="sn_label" type="Label" parent="TaskContainer"]
layout_mode = 0
offset_left = 157.0
offset_top = 144.0
offset_right = 255.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Surname: "
metadata/_edit_use_anchors_ = true

[node name="sn_box" type="TextEdit" parent="TaskContainer"]
layout_mode = 0
offset_left = 256.5
offset_top = 139.5
offset_right = 576.5
offset_bottom = 174.5
scroll_fit_content_height = true
metadata/_edit_use_anchors_ = true

[node name="ReferenceRect" type="ReferenceRect" parent="TaskContainer"]
layout_mode = 0
offset_left = 157.0
offset_top = 200.5
offset_right = 375.0
offset_bottom = 336.5
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="TaskContainer"]
layout_mode = 0
offset_left = 166.0
offset_top = 189.5
offset_right = 240.0
offset_bottom = 213.5
metadata/_edit_use_anchors_ = true

[node name="gender_label" type="Label" parent="TaskContainer"]
layout_mode = 0
offset_left = 174.0
offset_top = 188.0
offset_right = 232.0
offset_bottom = 215.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Gender"
metadata/_edit_use_anchors_ = true

[node name="male_cb" type="CheckBox" parent="TaskContainer"]
layout_mode = 0
offset_left = 170.5
offset_top = 219.5
offset_right = 194.5
offset_bottom = 243.5
button_group = ExtResource("2_yg6p7")
metadata/_edit_use_anchors_ = true

[node name="male_label" type="Label" parent="TaskContainer"]
layout_mode = 0
offset_left = 200.0
offset_top = 219.5
offset_right = 258.0
offset_bottom = 246.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Male"
metadata/_edit_use_anchors_ = true

[node name="female_cb" type="CheckBox" parent="TaskContainer"]
layout_mode = 0
offset_left = 170.5
offset_top = 256.5
offset_right = 194.5
offset_bottom = 280.5
button_group = ExtResource("2_yg6p7")
metadata/_edit_use_anchors_ = true

[node name="female_label" type="Label" parent="TaskContainer"]
layout_mode = 0
offset_left = 200.0
offset_top = 256.5
offset_right = 258.0
offset_bottom = 283.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Female"
metadata/_edit_use_anchors_ = true

[node name="other_cb" type="CheckBox" parent="TaskContainer"]
layout_mode = 0
offset_left = 170.5
offset_top = 293.5
offset_right = 194.5
offset_bottom = 317.5
button_group = ExtResource("2_yg6p7")
metadata/_edit_use_anchors_ = true

[node name="other_label" type="Label" parent="TaskContainer"]
layout_mode = 0
offset_left = 200.0
offset_top = 293.5
offset_right = 258.0
offset_bottom = 320.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Other"
metadata/_edit_use_anchors_ = true

[node name="submit_button" type="Button" parent="TaskContainer"]
layout_mode = 0
offset_left = 160.0
offset_top = 355.5
offset_right = 262.0
offset_bottom = 388.5
text = "SUBMIT"
metadata/_edit_use_anchors_ = true

[node name="Blur" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_gdbcw")
offset_left = 16.0
offset_top = 16.0
offset_right = 760.0
offset_bottom = 480.0
metadata/_edit_use_anchors_ = true

[node name="Tools" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="ToolsBG" type="ColorRect" parent="Tools"]
layout_mode = 0
offset_left = 776.0
offset_top = 72.0
offset_right = 1008.0
offset_bottom = 72.0
metadata/_edit_use_anchors_ = true

[node name="ToolsBorder" type="ReferenceRect" parent="Tools"]
layout_mode = 0
offset_left = 776.0
offset_top = 72.0
offset_right = 1008.0
offset_bottom = 72.0
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false
metadata/_edit_use_anchors_ = true

[node name="ScreenReader" type="Label" parent="Tools"]
visible = false
layout_mode = 0
offset_left = 776.0
offset_top = 72.0
offset_right = 960.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SCREEN READER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SR_btn" type="CheckBox" parent="Tools"]
layout_mode = 0
offset_left = 954.0
offset_top = 55.0
offset_right = 978.0
offset_bottom = 79.0
scale = Vector2(1.25, 1.25)
disabled = true
metadata/_edit_use_anchors_ = true

[node name="ToolsBtn" type="Button" parent="Tools"]
layout_mode = 0
offset_left = 928.0
offset_top = 70.0
offset_right = 1008.0
offset_bottom = 97.0
theme_override_styles/normal = ExtResource("1_cp3sm")
theme_override_styles/hover = ExtResource("2_tou46")
theme_override_styles/pressed = ExtResource("3_jabyo")
theme_override_styles/disabled = ExtResource("1_cp3sm")
theme_override_styles/focus = ExtResource("4_81r7x")
text = "OPEN"
metadata/_edit_use_anchors_ = true

[node name="ToolsLbl" type="Label" parent="Tools"]
layout_mode = 0
offset_left = 776.0
offset_top = 16.0
offset_right = 1008.0
offset_bottom = 72.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mggvl")
text = "TOOLS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ToolsAnimation" type="AnimationPlayer" parent="Tools"]
root_node = NodePath("../ToolsBtn")
libraries = {
"": SubResource("AnimationLibrary_0cvxn")
}

[node name="fade_bg" type="ColorRect" parent="."]
offset_left = -1.52588e-05
offset_right = 1024.0
offset_bottom = 592.0
color = Color(0, 0, 0, 0.866667)
metadata/_edit_use_anchors_ = true

[node name="Persona" type="Sprite2D" parent="."]
position = Vector2(157, 360)
scale = Vector2(0.229977, 0.229977)
texture = ExtResource("10_fy2rn")

[node name="PersonaSpeech" type="Button" parent="."]
offset_left = 206.5
offset_top = 185.0
offset_right = 538.5
offset_bottom = 372.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kivup")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1hu0q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0m6qc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cpbcf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pik2j")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="PersonaSpeech"]
position = Vector2(172, 96.0001)
scale = Vector2(0.183669, 0.183669)
texture = ExtResource("8_ugcmp")
flip_h = true

[node name="Message" type="Label" parent="PersonaSpeech"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0843373
anchor_right = 0.318337
offset_left = 48.0
offset_top = 27.0
offset_right = 193.312
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Penguin" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(891, 389)
scale = Vector2(0.121212, 0.121212)
texture = ExtResource("7_ywcne")
flip_h = true
hframes = 5

[node name="PenguinSpeech" type="Button" parent="."]
offset_left = 504.0
offset_top = 185.0
offset_right = 836.0
offset_bottom = 372.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kivup")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1hu0q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0m6qc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cpbcf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pik2j")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="PenguinSpeech"]
position = Vector2(172, 96.0001)
scale = Vector2(0.183669, 0.183669)
texture = ExtResource("8_ugcmp")

[node name="Message" type="Label" parent="PenguinSpeech"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.234
offset_left = 48.0
offset_top = 27.0
offset_right = 193.312
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="."]
offset_left = 246.0
offset_top = 520.0
offset_right = 1008.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_mggvl")
text = "TASK 2 - ACCESSIBLE FORM CONTROLS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Story" type="Label" parent="."]
offset_left = 16.0
offset_top = 520.0
offset_right = 248.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_mggvl")
text = "STORY"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StoryBG" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = 520.0
offset_right = 1008.0
offset_bottom = 520.0
metadata/_edit_use_anchors_ = true

[node name="StoryBorder" type="ReferenceRect" parent="."]
offset_left = 16.0
offset_top = 520.0
offset_right = 1008.0
offset_bottom = 1009.0
scale = Vector2(1, 2.08165e-12)
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false
metadata/_edit_use_anchors_ = true

[node name="pers_img" type="TextureRect" parent="StoryBorder"]
layout_mode = 2
offset_left = 21.0
offset_top = 20.5
offset_right = 264.0
offset_bottom = 263.5
texture = ExtResource("12_37j8a")
expand_mode = 1

[node name="pers_outline" type="ReferenceRect" parent="StoryBorder"]
layout_mode = 0
offset_left = 22.0
offset_top = 22.0
offset_right = 264.0
offset_bottom = 264.0
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false

[node name="info_outline" type="ReferenceRect" parent="StoryBorder"]
layout_mode = 0
offset_left = 22.0
offset_top = 281.0
offset_right = 264.0
offset_bottom = 385.0
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false

[node name="exit_outline" type="ReferenceRect" parent="StoryBorder"]
layout_mode = 0
offset_left = 22.0
offset_top = 402.0
offset_right = 264.0
offset_bottom = 468.0
border_width = 2.0
editor_only = false

[node name="story_outline" type="ReferenceRect" parent="StoryBorder"]
layout_mode = 0
offset_left = 281.0
offset_top = 22.0
offset_right = 973.0
offset_bottom = 468.0
border_color = Color(0, 0, 0, 1)
border_width = 2.0
editor_only = false

[node name="name_lbl" type="RichTextLabel" parent="StoryBorder"]
layout_mode = 0
offset_left = 23.0
offset_top = 288.5
offset_right = 265.0
offset_bottom = 318.5
rotation = 0.00812727
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Name: [b]BARBARA DAVIS[/b]"
fit_content = true

[node name="age_lbl" type="RichTextLabel" parent="StoryBorder"]
layout_mode = 0
offset_left = 23.0
offset_top = 318.5
offset_right = 265.0
offset_bottom = 348.5
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Age: [b]63[/b]"
fit_content = true

[node name="disability_lbl" type="RichTextLabel" parent="StoryBorder"]
layout_mode = 0
offset_left = 22.0
offset_top = 348.5
offset_right = 264.0
offset_bottom = 378.5
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Disability: [b]CATARACTS[/b]"
fit_content = true

[node name="exit_lbl" type="RichTextLabel" parent="StoryBorder"]
layout_mode = 0
offset_left = 52.5
offset_top = 411.0
offset_right = 233.5
offset_bottom = 457.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Press [b]CLOSE[/b] to return to the task!"
fit_content = true

[node name="story_lbl" type="RichTextLabel" parent="StoryBorder"]
layout_mode = 0
offset_left = 290.0
offset_top = 38.0
offset_right = 959.0
offset_bottom = 449.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[b]Barbara's Story[/b]

Barbara Davis has been living with cataracts for several years. She has been married to her husband, John, for over 50 years, and they have two grown children and four grandchildren.

Barbara worked as a schoolteacher for many years before retiring, and now she volunteers at her local community center. She enjoys spending time with her family, reading, and gardening in her spare time. However, her vision problems have made some of these activities more difficult, and she sometimes feels frustrated with her limitations.

Despite these challenges, Barbara remains optimistic and determined to maintain her independence. She has a close relationship with her family, who provide her with emotional support and practical assistance when needed. Overall, Barbara's life has been full and rewarding, and she is grateful for the love and support of her family and friends as she navigates the challenges of aging and vision loss."
fit_content = true
scroll_active = false

[node name="StoryBtn" type="Button" parent="."]
offset_left = 16.0
offset_top = 495.0
offset_right = 96.0
offset_bottom = 522.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_vh1cq")
theme_override_styles/hover = SubResource("StyleBoxFlat_vylau")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dtgad")
theme_override_styles/disabled = SubResource("StyleBoxFlat_g4fu3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5vj4k")
text = "OPEN"
metadata/_edit_use_anchors_ = true

[node name="StoryAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../StoryBtn")
libraries = {
"": SubResource("AnimationLibrary_4hwui")
}

[connection signal="pressed" from="TaskContainer/submit_button" to="." method="_on_submit_button_pressed"]
[connection signal="toggled" from="Tools/SR_btn" to="." method="_on_sr_btn_toggled"]
[connection signal="pressed" from="Tools/ToolsBtn" to="." method="_on_ToolsBtn_pressed"]
[connection signal="pressed" from="PenguinSpeech" to="." method="_on_PenguinSpeech_pressed"]
[connection signal="pressed" from="StoryBtn" to="." method="_on_StoryBtn_pressed"]
